--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -705,9 +705,9 @@ FONT 8, "MS Sans Serif"
 BEGIN
     CONTROL         "Tree1",IDC_TREESETTINGS_TREE,"SysTreeView32",
                     TVS_HASBUTTONS | TVS_HASLINES | TVS_SHOWSELALWAYS | 
-                    TVS_TRACKSELECT | WS_BORDER | WS_TABSTOP,5,5,90,170
+                    TVS_TRACKSELECT | WS_BORDER | WS_TABSTOP,5,5,123,170
     CONTROL         "",IDC_TREESETTINGS_PAGEFRAME,"Static",SS_BLACKFRAME | 
-                    NOT WS_VISIBLE,100,5,230,160
+                    NOT WS_VISIBLE,133,5,197,169
     PUSHBUTTON      "OK",IDOK,165,180,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,220,180,50,14
     PUSHBUTTON      "Help",IDC_HELPBTN,275,180,50,14
@@ -729,10 +729,10 @@ BEGIN
                     TCS_HOTTRACK,0,0,200,160
 END
 
-IDD_TREESETTINGS_GENERIC DIALOGEX 0, 0, 241, 166
+IDD_TREESETTINGS_GENERIC DIALOGEX 0, 0, 197, 169
 STYLE DS_CONTROL | WS_CHILD
 EXSTYLE WS_EX_APPWINDOW
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
     LISTBOX         IDC_TREESETTINGS_GENERIC_LIST,7,1,100,159,LBS_SORT | 
                     LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_HSCROLL | 
@@ -744,13 +744,13 @@ BEGIN
                     14
     CONTROL         "",IDC_TREESETTINGS_GENERIC_CHECK,"Button",
                     BS_AUTOCHECKBOX | BS_NOTIFY | NOT WS_VISIBLE | 
-                    WS_TABSTOP,113,1,122,10
+                    WS_TABSTOP,113,1,80,10
     CONTROL         "Slider1",IDC_TREESETTINGS_GENERIC_SLIDER,
                     "msctls_trackbar32",TBS_VERT | TBS_TOP | NOT WS_VISIBLE | 
-                    WS_TABSTOP,205,0,33,148
-    PUSHBUTTON      "Default",IDC_TREESETTINGS_GENERIC_DEFAULT,115,30,45,14,
+                    WS_TABSTOP,136,20,33,117
+    PUSHBUTTON      "Default",IDC_TREESETTINGS_GENERIC_DEFAULT,128,147,45,14,
                     NOT WS_VISIBLE
-    COMBOBOX        IDC_TREESETTINGS_GENERIC_CHOOSEFROMLIST,113,1,122,75,
+    COMBOBOX        IDC_TREESETTINGS_GENERIC_CHOOSEFROMLIST,113,1,84,75,
                     CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
 END
 
