--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -732,7 +732,7 @@ END
 IDD_TREESETTINGS_GENERIC DIALOGEX 0, 0, 197, 169
 STYLE DS_CONTROL | WS_CHILD
 EXSTYLE WS_EX_APPWINDOW
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     LISTBOX         IDC_TREESETTINGS_GENERIC_LIST,7,1,100,159,LBS_SORT | 
                     LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_HSCROLL | 
@@ -1043,6 +1043,8 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "&Search VideoText ...\tCtrl+F", IDM_VT_SEARCH, GRAYED
         MENUITEM "Search &Next\tF3",            IDM_VT_SEARCHNEXT, GRAYED
+        MENUITEM "Search &Highlight",           IDM_VT_SEARCHHIGHLIGHT
+        , GRAYED
         MENUITEM SEPARATOR
         MENUITEM "Videotext-Infos ...",         IDM_VT_OUT, GRAYED
         MENUITEM "VPS-Infos ...",               IDM_VPS_OUT, GRAYED
