--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -841,8 +841,8 @@ BEGIN
         BEGIN
             MENUITEM "Show &Next\tEnter",           IDM_SHOW_OSD
             MENUITEM "&Hide\tBackspace",            IDM_HIDE_OSD
-            MENUITEM "&Show Screen",                IDM_SHOW_SCREEN
-            MENUITEM "A&ctivate Screens",           IDM_SHOW_SCREEN
+            MENUITEM "&Show Screen",                65535
+            MENUITEM "A&ctivate Screens",           65535
             MENUITEM "&Autohide",                   IDM_AUTOHIDE_OSD
             , CHECKED
         END
@@ -936,6 +936,28 @@ BEGIN
     POPUP "S&ettings"
     BEGIN
         MENUITEM "Audio-Mi&xer Setup",          IDM_AUDIO_MIXER
+        POPUP "&Video Setup"
+        BEGIN
+            POPUP "Card &Calibration"
+            BEGIN
+                MENUITEM "Test &Patterns",              65535
+                MENUITEM "Start &Manual",               IDM_START_MANUAL_CALIBRATION
+
+                MENUITEM "Start &Automatic (full)",     IDM_START_AUTO_CALIBRATION
+
+                MENUITEM "Start Automatic (&brightness / contrast)", 
+                                                        IDM_START_AUTO_CALIBRATION2
+
+                MENUITEM "Start Automatic (&color)",    IDM_START_AUTO_CALIBRATION3
+
+                MENUITEM "Start YCbCr &range",          IDM_START_YUV_RANGE
+                MENUITEM "&Stop",                       IDM_STOP_CALIBRATION
+            END
+            MENUITEM "&Video Adjustments ...",      IDM_VIDEOSETTINGS
+            MENUITEM "&Overlay Adjustments ...",    IDM_OVERLAYSETTINGS
+            MENUITEM "St&op",                       IDM_OVERLAY_STOP
+            MENUITEM "St&art",                      IDM_OVERLAY_START
+        END
         POPUP "&Deinterlace Mode"
         BEGIN
             MENUITEM "&Automatic Film / Video Detection\tCtrl+Space", 
@@ -960,37 +982,37 @@ BEGIN
             MENUITEM "Progressive Scan",            IDM_PROGRESSIVE_SCAN
             MENUITEM "Film Mode",                   IDM_FILM_MODE, GRAYED
         END
-        MENUITEM "Select &Filters",             IDM_SHOW_SCREEN
+        MENUITEM "Select &Filters",             65535
+        MENUITEM "Change &Settings...",         IDM_SETTINGS_CHANGESETTINGS
+        MENUITEM SEPARATOR
+        MENUITEM "&Reset Statistics",           IDM_RESET_STATS
         MENUITEM SEPARATOR
         MENUITEM "Vertical &Mirror",            IDM_VERTICAL_FLIP
-        MENUITEM "&Video Adjustments ...",      IDM_VIDEOSETTINGS
-        MENUITEM "&Use DScaler Overlay Settings", IDM_USE_DSCALER_OVERLAY
-        MENUITEM "&Overlay Adjustments ...",    IDM_OVERLAYSETTINGS
-        POPUP "Card &Calibration"
-        BEGIN
-            MENUITEM "Test &Patterns",              IDM_SHOW_SCREEN
-            MENUITEM "Start &Manual",               IDM_START_MANUAL_CALIBRATION
-
-            MENUITEM "Start &Automatic (full)",     IDM_START_AUTO_CALIBRATION
-
-            MENUITEM "Start Automatic (&brightness / contrast)", 
-                                                    IDM_START_AUTO_CALIBRATION2
-
-            MENUITEM "Start Automatic (&color)",    IDM_START_AUTO_CALIBRATION3
-
-            MENUITEM "Start YCbCr &range",          IDM_START_YUV_RANGE
-            MENUITEM "&Stop",                       IDM_STOP_CALIBRATION
-        END
-        MENUITEM "&Auto Format Detection",      IDM_AUTO_FORMAT
         MENUITEM "&Keyboard lock\tCtrl+Shift+L", IDM_KEYBOARDLOCK
-        MENUITEM "Change S&ettings...",         IDM_SETTINGS_CHANGESETTINGS
+        POPUP "Thread &Priorities"
+        BEGIN
+            POPUP "Program"
+            BEGIN
+                MENUITEM "Normal",                      IDM_PRIORCLASS_0
+                MENUITEM "High",                        IDM_PRIORCLASS_1
+                MENUITEM "Very High",                   IDM_PRIORCLASS_2
+            END
+            POPUP "Decoding and Output"
+            BEGIN
+                MENUITEM "Low",                         IDM_TREADPRIOR_0
+                MENUITEM "Normal",                      IDM_TREADPRIOR_1
+                MENUITEM "Above Normal",                IDM_TREADPRIOR_2
+                MENUITEM "High",                        IDM_TREADPRIOR_3
+                MENUITEM "Very High",                   IDM_TREADPRIOR_4
+            END
+        END
     END
     POPUP "&Sources"
     BEGIN
         MENUITEM "Set as &initial source",      IDM_SOURCE_INITIAL
         MENUITEM SEPARATOR
     END
-    MENUITEM "Holder",                      IDM_SHOW_SCREEN
+    MENUITEM "Holder",                      65535
     POPUP "&Datacasting"
     BEGIN
         MENUITEM "Capture VBI-&Data",           IDM_VBI
@@ -1049,32 +1071,6 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "Videotext-Infos ...",         IDM_VT_OUT, GRAYED
         MENUITEM "VPS-Infos ...",               IDM_VPS_OUT, GRAYED
-    END
-    POPUP "Adva&nced"
-    BEGIN
-        POPUP "Thread &Priorities"
-        BEGIN
-            POPUP "Program"
-            BEGIN
-                MENUITEM "Normal",                      IDM_PRIORCLASS_0
-                MENUITEM "High",                        IDM_PRIORCLASS_1
-                MENUITEM "Very High",                   IDM_PRIORCLASS_2
-            END
-            POPUP "Decoding and Output"
-            BEGIN
-                MENUITEM "Low",                         IDM_TREADPRIOR_0
-                MENUITEM "Normal",                      IDM_TREADPRIOR_1
-                MENUITEM "Above Normal",                IDM_TREADPRIOR_2
-                MENUITEM "High",                        IDM_TREADPRIOR_3
-                MENUITEM "Very High",                   IDM_TREADPRIOR_4
-            END
-        END
-        POPUP "Video &Overlay"
-        BEGIN
-            MENUITEM "St&op",                       IDM_OVERLAY_STOP
-            MENUITEM "St&art",                      IDM_OVERLAY_START
-        END
-        MENUITEM "&Reset Statistics",           IDM_RESET_STATS
     END
     POPUP "&Help"
     BEGIN
