--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -491,9 +491,9 @@ FONT 8, "MS Sans Serif"
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,305,9,58,19
     CTEXT           "DScaler Version 4.x",IDC_VERSION,0,3,293,9
-    CTEXT           "Copyright (C) 2000-2002 John Adcock",IDC_STATIC,0,24,
-                    293,10
-    GROUPBOX        "DScaler Contains Code From These Projects",IDC_STATIC,7,
+    CTEXT           "Copyright © 2000-2002 John Adcock",IDC_STATIC,0,24,293,
+                    10
+    GROUPBOX        "DScaler contains code from these projects",IDC_STATIC,7,
                     143,177,58
     GROUPBOX        "GPL Information && Open Source Policy",IDC_STATIC,5,203,
                     364,65
@@ -501,13 +501,14 @@ BEGIN
                     IDC_STATIC,11,214,354,24
     LTEXT           "This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.",
                     IDC_STATIC,11,238,351,24
-    LTEXT           "MultiDec (c) Espresso",IDC_STATIC,13,154,163,9
+    LTEXT           "MultiDec - Copyright © Espresso",IDC_STATIC,13,154,163,
+                    9
     GROUPBOX        "Authors",IDC_STATIC,6,37,180,100
     CTEXT           "http://www.dscaler.org",IDC_LINK2,6,13,288,9,SS_NOTIFY | 
                     SS_SUNKEN
-    LTEXT           "bttv - Copyright (c) Ralph Metzler && Marcus Metzler",
+    LTEXT           "bttv - Copyright © Ralph Metzler && Marcus Metzler",
                     IDC_STATIC,13,165,165,11
-    LTEXT           "I2C Interface Copyright (c) Gerd Knorr",IDC_STATIC,13,
+    LTEXT           "I2C Interface - Copyright © Gerd Knorr",IDC_STATIC,13,
                     177,160,10
     GROUPBOX        "Support",IDC_STATIC,194,37,180,100
     LTEXT           "The best place to get support for DScaler are the support forums at DScaler's support forum. Click on link below.",
@@ -518,14 +519,14 @@ BEGIN
                     IDC_STATIC,200,104,166,26
     CTEXT           "http://www.dscaler.org/phpBB/index.php",IDC_LINK,201,81,
                     162,12,SS_NOTIFY | SS_CENTERIMAGE | SS_SUNKEN
-    LTEXT           "VirtualDub - Copyright (c) Avery Lee",IDC_STATIC,13,189,
+    LTEXT           "VirtualDub - Copyright © Avery Lee",IDC_STATIC,13,189,
                     161,9
     LTEXT           "John Adcock\nMark Rejhon\nSteve Grimm\nTom Barry\nMichael Eskin\nMichael Samblanet\nLaurent Garnier\nJochen Trenner\nTorbjörn Jansson",
                     IDC_STATIC,12,52,74,81
-    GROUPBOX        "DScaler Uses",IDC_STATIC,194,143,180,58
-    LTEXT           "LibTiff Copyright (c) Sam Leffler && Silicon Graphics",
+    GROUPBOX        "DScaler uses",IDC_STATIC,194,143,180,58
+    LTEXT           "LibTiff - Copyright © Sam Leffler && Silicon Graphics",
                     IDC_STATIC,199,155,169,9
-    LTEXT           "LibJpeg a work of the Independent JPEG Group",
+    LTEXT           "LibJpeg - A work of the Independent JPEG Group",
                     IDC_STATIC,199,166,169,9
 END
 
