added vertical mirror. fixed field ordering and even/odd flags, seems like it is working

--- a/DSRend/DSRend.rc
+++ b/DSRend/DSRend.rc
@@ -157,7 +157,7 @@ BEGIN
     CONTROL         "Swap even and odd fields",IDC_SETTINGSPAGE_SWAPFIELDS,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,5,35,98,10
     CONTROL         "Vertical mirror",IDC_SETTINGSPAGE_VERTMIRROR,"Button",
-                    BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,5,45,55,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,5,45,55,10
     LTEXT           "Size",IDC_STATIC,5,90,19,8
     LTEXT           "",IDC_SETTINGSPAGE_SIZE,85,90,50,10,SS_SUNKEN
     GROUPBOX        "Settings",IDC_STATIC,0,0,170,60
